# GridSearch-F1

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: index.html
notebooks/: eda.ipynb  eda.py  theme.css
