[project]
name = "f1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "kagglehub>=0.3.13",
    "marimo>=0.18.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.0",
    "duckdb>=1.4.3",
    "nbformat>=5.10.4",
    "python-lsp-server>=1.14.0",
    "ruff>=0.14.8",
    "sqlglot>=28.1.0",
    "ty>=0.0.1a33",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]
